--- a/src/gui/activitywidget.ui
+++ b/src/gui/activitywidget.ui
@@ -25,6 +25,13 @@
     <widget class="QListView" name="_activityList"/>
    </item>
    <item row="2" column="0">
+    <widget class="QLabel" name="_bottomLabel">
+     <property name="text">
+      <string>TextLabel</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="0">
     <widget class="QDialogButtonBox" name="_dialogButtonBox"/>
    </item>
   </layout>
